k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: data
spec:
 replicas: 1
 selector:
  matchLabels:
   app: backend
 template:
  metadata:
   labels:
    app: backend
  spec:
   containers:
    - name: backend-cont
      image: backend:v2
      ports:
       - containerPort: 8080
      resources:
        requests:
         cpu: "250m"
         memory: "128Mi"
        limits:
         cpu: "500m"
         memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: data
spec:
 type: ClusterIP
 selector:
  app: backend
 ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
