k8s/sql-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: data
spec:
 replicas: 1
 selector:
   matchLabels:
    app: mysql
 template:
  metadata:
    labels:
      app: mysql
  spec:
    containers:
     - name: mysql
       image: mysql:8.0
       ports:
        - containerPort: 3306
       resources:
         requests:
           memory: "512Mi"
           cpu: "250m"
         limits:
           memory: "1Gi"
           cpu: "500m"
       volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
    volumes:
     - name: mysql-storage
       persistentVolumeClaim:
          claimName: my-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: data
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
   - protocol: TCP
     port: 3306
     targetPort: 3306
